@@ -1,45 +1,37 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.execution.configurations;
 
 import com.intellij.execution.CantRunException;
 import com.intellij.execution.ExecutionBundle;
 import com.intellij.openapi.actionSystem.DataKey;
 import com.intellij.openapi.diagnostic.Logger;
+import com.intellij.openapi.module.EffectiveLanguageLevelUtil;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.project.Project;
+import com.intellij.openapi.projectRoots.JavaSdkVersion;
+import com.intellij.openapi.projectRoots.JavaSdkVersionUtil;
 import com.intellij.openapi.projectRoots.Sdk;
 import com.intellij.openapi.roots.*;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.openapi.vfs.encoding.EncodingProjectManager;
-import com.intellij.util.NotNullFunction;
+import com.intellij.openapi.vfs.jrt.JrtFileSystem;
+import com.intellij.pom.java.LanguageLevel;
 import com.intellij.util.PathsList;
-import com.intellij.util.Processor;
 import com.intellij.util.text.VersionComparatorUtil;
 import org.intellij.lang.annotations.MagicConstant;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.nio.charset.Charset;
+import java.util.Arrays;
 import java.util.LinkedHashSet;
 import java.util.Set;
 
 public class JavaParameters extends SimpleJavaParameters {
   private static final Logger LOG = Logger.getInstance(JavaParameters.class);
   private static final String JAVA_LIBRARY_PATH_PROPERTY = "java.library.path";
+
+  public static final String JAVA_ENABLE_PREVIEW_PROPERTY = "--enable-preview";
   public static final DataKey<JavaParameters> JAVA_PARAMETERS = DataKey.create("javaParameters");
 
   public String getJdkPath() throws CantRunException {
@@ -58,13 +50,15 @@ public class JavaParameters extends SimpleJavaParameters {
   public static final int JDK_ONLY = 0x1;
   public static final int CLASSES_ONLY = 0x2;
   public static final int TESTS_ONLY = 0x4;
+  public static final int INCLUDE_PROVIDED = 0x8;
   public static final int JDK_AND_CLASSES = JDK_ONLY | CLASSES_ONLY;
   public static final int JDK_AND_CLASSES_AND_TESTS = JDK_ONLY | CLASSES_ONLY | TESTS_ONLY;
   public static final int CLASSES_AND_TESTS = CLASSES_ONLY | TESTS_ONLY;
+  public static final int JDK_AND_CLASSES_AND_PROVIDED = JDK_ONLY | CLASSES_ONLY | INCLUDE_PROVIDED;
 
-  public void configureByModule(final Module module,
-                                @MagicConstant(valuesFromClass = JavaParameters.class) final int classPathType,
-                                final Sdk jdk) throws CantRunException {
+  public void configureByModule(Module module,
+                                @MagicConstant(valuesFromClass = JavaParameters.class) int classPathType,
+                                Sdk jdk) throws CantRunException {
     if ((classPathType & JDK_ONLY) != 0) {
       if (jdk == null) {
         throw CantRunException.noJdkConfigured();
@@ -77,8 +71,24 @@ public class JavaParameters extends SimpleJavaParameters {
     }
 
     setDefaultCharset(module.getProject());
-    configureEnumerator(OrderEnumerator.orderEntries(module).runtimeOnly().recursively(), classPathType, jdk).collectPaths(getClassPath());
+    configureEnumerator(OrderEnumerator.orderEntries(module).recursively(), classPathType, jdk).collectPaths(getClassPath());
     configureJavaLibraryPath(OrderEnumerator.orderEntries(module).recursively());
+    configureJavaEnablePreviewProperty(OrderEnumerator.orderEntries(module).recursively(), jdk);
+  }
+
+  private void configureJavaEnablePreviewProperty(OrderEnumerator orderEnumerator, Sdk jdk) {
+    ParametersList vmParameters = getVMParametersList();
+    if (vmParameters.hasParameter(JAVA_ENABLE_PREVIEW_PROPERTY) || !JavaSdkVersionUtil.isAtLeast(jdk, JavaSdkVersion.JDK_11)) {
+      return;
+    }
+    orderEnumerator.forEachModule(module -> {
+      LanguageLevel languageLevel = EffectiveLanguageLevelUtil.getEffectiveLanguageLevel(module);
+      if (languageLevel.isPreview()) {
+        vmParameters.add(JAVA_ENABLE_PREVIEW_PROPERTY);
+        return false;
+      }
+      return true;
+    });
   }
 
   private void configureJavaLibraryPath(OrderEnumerator enumerator) {
@@ -87,22 +97,13 @@ public class JavaParameters extends SimpleJavaParameters {
     if (!pathsList.getPathList().isEmpty()) {
       ParametersList vmParameters = getVMParametersList();
       if (vmParameters.hasProperty(JAVA_LIBRARY_PATH_PROPERTY)) {
-        LOG.info(JAVA_LIBRARY_PATH_PROPERTY + " property is already specified, native library paths from dependencies (" + pathsList.getPathsString() + ") won't be added");
+        LOG.info(JAVA_LIBRARY_PATH_PROPERTY + " property is already specified, " +
+                 "native library paths from dependencies (" + pathsList.getPathsString() + ") won't be added");
       }
       else {
         vmParameters.addProperty(JAVA_LIBRARY_PATH_PROPERTY, pathsList.getPathsString());
       }
     }
-  }
-
-  @Nullable
-  private static NotNullFunction<OrderEntry, VirtualFile[]> computeRootProvider(@MagicConstant(valuesFromClass = JavaParameters.class) int classPathType, final Sdk jdk) {
-    return (classPathType & JDK_ONLY) == 0 ? null : (NotNullFunction<OrderEntry, VirtualFile[]>)orderEntry -> {
-        if (orderEntry instanceof JdkOrderEntry) {
-          return jdk.getRootProvider().getFiles(OrderRootType.CLASSES);
-        }
-        return orderEntry.getFiles(OrderRootType.CLASSES);
-      };
   }
 
   public void setDefaultCharset(final Project project) {
@@ -116,7 +117,7 @@ public class JavaParameters extends SimpleJavaParameters {
   }
 
   /** @deprecated use {@link #getValidJdkToRunModule(Module, boolean)} instead */
-  @SuppressWarnings("unused")
+  @Deprecated
   public static Sdk getModuleJdk(final Module module) throws CantRunException {
     return getValidJdkToRunModule(module, false);
   }
@@ -141,7 +142,7 @@ public class JavaParameters extends SimpleJavaParameters {
       return null;
     }
 
-    final Set<Sdk> sdksFromDependencies = new LinkedHashSet<Sdk>();
+    final Set<Sdk> sdksFromDependencies = new LinkedHashSet<>();
     OrderEnumerator enumerator = OrderEnumerator.orderEntries(module).runtimeOnly().recursively();
     if (productionOnly) {
       enumerator = enumerator.productionOnly();
@@ -167,7 +168,9 @@ public class JavaParameters extends SimpleJavaParameters {
     return result;
   }
 
-  public void configureByProject(final Project project, @MagicConstant(valuesFromClass = JavaParameters.class) final int classPathType, final Sdk jdk) throws CantRunException {
+  public void configureByProject(Project project,
+                                 @MagicConstant(valuesFromClass = JavaParameters.class) int classPathType,
+                                 Sdk jdk) throws CantRunException {
     if ((classPathType & JDK_ONLY) != 0) {
       if (jdk == null) {
         throw CantRunException.noJdkConfigured();
@@ -181,9 +184,13 @@ public class JavaParameters extends SimpleJavaParameters {
     setDefaultCharset(project);
     configureEnumerator(OrderEnumerator.orderEntries(project).runtimeOnly(), classPathType, jdk).collectPaths(getClassPath());
     configureJavaLibraryPath(OrderEnumerator.orderEntries(project));
+    configureJavaEnablePreviewProperty(OrderEnumerator.orderEntries(project), jdk);
   }
 
-  private static OrderRootsEnumerator configureEnumerator(OrderEnumerator enumerator, @MagicConstant(valuesFromClass = JavaParameters.class) int classPathType, Sdk jdk) {
+  private static OrderRootsEnumerator configureEnumerator(OrderEnumerator enumerator, int classPathType, Sdk jdk) {
+    if ((classPathType & INCLUDE_PROVIDED) == 0) {
+      enumerator = enumerator.runtimeOnly();
+    }
     if ((classPathType & JDK_ONLY) == 0) {
       enumerator = enumerator.withoutSdk();
     }
@@ -191,10 +198,16 @@ public class JavaParameters extends SimpleJavaParameters {
       enumerator = enumerator.productionOnly();
     }
     OrderRootsEnumerator rootsEnumerator = enumerator.classes();
-    final NotNullFunction<OrderEntry, VirtualFile[]> provider = computeRootProvider(classPathType, jdk);
-    if (provider != null) {
-      rootsEnumerator = rootsEnumerator.usingCustomRootProvider(provider);
+    if ((classPathType & JDK_ONLY) != 0) {
+      rootsEnumerator = rootsEnumerator.usingCustomRootProvider(
+        e -> e instanceof JdkOrderEntry ? jdkRoots(jdk) : e.getFiles(OrderRootType.CLASSES));
     }
     return rootsEnumerator;
+  }
+
+  private static VirtualFile[] jdkRoots(Sdk jdk) {
+    return Arrays.stream(jdk.getRootProvider().getFiles(OrderRootType.CLASSES))
+      .filter(f -> !JrtFileSystem.isModuleRoot(f))
+      .toArray(VirtualFile[]::new);
   }
 }
