@@ -1,18 +1,4 @@
-/*
- * Copyright 2000-2015 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.jps.incremental.java;
 
 import com.intellij.openapi.diagnostic.Logger;
@@ -22,19 +8,27 @@ import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.io.FileFilters;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.util.SystemProperties;
+import com.intellij.util.ExceptionUtil;
+import com.intellij.util.concurrency.Semaphore;
 import com.intellij.util.concurrency.SequentialTaskExecutor;
+import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.containers.JBIterable;
+import com.intellij.util.containers.SmartHashSet;
+import com.intellij.util.execution.ParametersListUtil;
 import com.intellij.util.io.PersistentEnumeratorBase;
+import com.intellij.util.lang.JavaVersion;
 import gnu.trove.THashMap;
 import gnu.trove.THashSet;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.jps.ModuleChunk;
+import org.jetbrains.jps.PathUtils;
 import org.jetbrains.jps.ProjectPaths;
 import org.jetbrains.jps.api.GlobalOptions;
 import org.jetbrains.jps.builders.BuildRootIndex;
 import org.jetbrains.jps.builders.DirtyFilesHolder;
 import org.jetbrains.jps.builders.FileProcessor;
+import org.jetbrains.jps.builders.impl.DirtyFilesHolderBase;
 import org.jetbrains.jps.builders.java.JavaBuilderExtension;
 import org.jetbrains.jps.builders.java.JavaBuilderUtil;
 import org.jetbrains.jps.builders.java.JavaCompilingTool;
@@ -62,72 +56,73 @@ import org.jetbrains.jps.service.JpsServiceManager;
 import org.jetbrains.jps.service.SharedThreadPool;
 
 import javax.tools.*;
-import java.io.*;
+import java.io.File;
+import java.io.FileFilter;
+import java.io.IOException;
 import java.net.ServerSocket;
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.Executor;
 import java.util.concurrent.Future;
-import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.BiConsumer;
+import java.util.stream.Collectors;
+
+import static com.intellij.openapi.util.Pair.pair;
 
 /**
  * @author Eugene Zhuravlev
- *         Date: 9/21/11
  */
 public class JavaBuilder extends ModuleLevelBuilder {
   private static final Logger LOG = Logger.getInstance("#org.jetbrains.jps.incremental.java.JavaBuilder");
-  public static final String BUILDER_NAME = "java";
   private static final String JAVA_EXTENSION = "java";
-  private static final Key<Integer> JAVA_COMPILER_VERSION_KEY = Key.create("_java_compiler_version_");
+
+  public static final String BUILDER_NAME = "java";
   public static final Key<Boolean> IS_ENABLED = Key.create("_java_compiler_enabled_");
-  private static final Key<JavaCompilingTool> COMPILING_TOOL = Key.create("_java_compiling_tool_");
-  private static final Key<AtomicReference<String>> COMPILER_VERSION_INFO = Key.create("_java_compiler_version_info_");
-
-  private static final Set<String> FILTERED_OPTIONS = new HashSet<String>(Collections.<String>singletonList(
-    "-target"
-  ));
-  private static final Set<String> FILTERED_SINGLE_OPTIONS = new HashSet<String>(Arrays.<String>asList(
-    "-g", "-deprecation", "-nowarn", "-verbose", "-proc:none", "-proc:only", "-proceedOnError"
-  ));
-
   public static final FileFilter JAVA_SOURCES_FILTER = FileFilters.withExtension(JAVA_EXTENSION);
-  private static final String RT_JAR_PATH_SUFFIX = File.separator + "rt.jar";
 
-  private final Executor myTaskRunner;
-  private static final List<ClassPostProcessor> ourClassProcessors = new ArrayList<ClassPostProcessor>();
-  private static final Set<JpsModuleType<?>> ourCompilableModuleTypes;
-  @Nullable
-  private static final File ourDefaultRtJar;
+  private static final Key<Boolean> PREFER_TARGET_JDK_COMPILER = GlobalContextKey.create("_prefer_target_jdk_javac_");
+  private static final Key<JavaCompilingTool> COMPILING_TOOL = Key.create("_java_compiling_tool_");
+  private static final Key<ConcurrentMap<String, Collection<String>>> COMPILER_USAGE_STATISTICS = Key.create("_java_compiler_usage_stats_");
+  private static final List<String> COMPILABLE_EXTENSIONS = Collections.singletonList(JAVA_EXTENSION);
+
+  private static final Set<String> FILTERED_OPTIONS = ContainerUtil.newHashSet(
+    "-target"
+  );
+  private static final Set<String> FILTERED_SINGLE_OPTIONS = ContainerUtil.newHashSet(
+    "-g", "-deprecation", "-nowarn", "-verbose", "-proc:none", "-proc:only", "-proceedOnError"
+  );
+
+  private static final List<ClassPostProcessor> ourClassProcessors = new ArrayList<>();
+  private static final Set<JpsModuleType<?>> ourCompilableModuleTypes = new HashSet<>();
+  @Nullable private static final File ourDefaultRtJar;
   static {
-    ourCompilableModuleTypes = new HashSet<JpsModuleType<?>>();
     for (JavaBuilderExtension extension : JpsServiceManager.getInstance().getExtensions(JavaBuilderExtension.class)) {
       ourCompilableModuleTypes.addAll(extension.getCompilableModuleTypes());
     }
+
     File rtJar = null;
     StringTokenizer tokenizer = new StringTokenizer(System.getProperty("sun.boot.class.path", ""), File.pathSeparator, false);
     while (tokenizer.hasMoreTokens()) {
-      final String path = tokenizer.nextToken();
-      if (isRtJarPath(path)) {
-        rtJar = new File(path);
+      File file = new File(tokenizer.nextToken());
+      if ("rt.jar".equals(file.getName())) {
+        rtJar = file;
         break;
       }
     }
     ourDefaultRtJar = rtJar;
   }
-  
-  private static boolean isRtJarPath(String path) {
-    if (StringUtil.endsWithIgnoreCase(path, RT_JAR_PATH_SUFFIX)) {
-      return true;
-    }
-    return RT_JAR_PATH_SUFFIX.charAt(0) != '/' && StringUtil.endsWithIgnoreCase(path, "/rt.jar");
-  }
+
 
   public static void registerClassPostProcessor(ClassPostProcessor processor) {
     ourClassProcessors.add(processor);
   }
 
+  private final Executor myTaskRunner;
+
   public JavaBuilder(Executor tasksExecutor) {
     super(BuilderCategory.TRANSLATOR);
-    myTaskRunner = new SequentialTaskExecutor(tasksExecutor);
+    myTaskRunner = SequentialTaskExecutor.createSequentialApplicationPoolExecutor("JavaBuilder Pool", tasksExecutor);
     //add here class processors in the sequence they should be executed
   }
 
@@ -139,21 +134,58 @@ public class JavaBuilder extends ModuleLevelBuilder {
 
   @Override
   public void buildStarted(CompileContext context) {
-    final JpsProject project = context.getProjectDescriptor().getProject();
-    final JpsJavaCompilerConfiguration config = JpsJavaExtensionService.getInstance().getCompilerConfiguration(project);
-    final String compilerId = config == null? JavaCompilers.JAVAC_ID : config.getJavaCompilerId();
+    final String compilerId = getUsedCompilerId(context);
     if (LOG.isDebugEnabled()) {
       LOG.debug("Java compiler ID: " + compilerId);
     }
     JavaCompilingTool compilingTool = JavaBuilderUtil.findCompilingTool(compilerId);
     COMPILING_TOOL.set(context, compilingTool);
-    String messageText = compilingTool != null ? "Using " + compilingTool.getDescription() + " to compile java sources" : null;
-    COMPILER_VERSION_INFO.set(context, new AtomicReference<String>(messageText));
+    COMPILER_USAGE_STATISTICS.set(context, new ConcurrentHashMap<>());
+  }
+
+  @Override
+  public void chunkBuildStarted(final CompileContext context, final ModuleChunk chunk) {
+    // before the first compilation round starts: find and mark dirty all classes that depend on removed or moved classes so
+    // that all such files are compiled in the first round.
+    try {
+      JavaBuilderUtil.markDirtyDependenciesForInitialRound(context, new DirtyFilesHolderBase<JavaSourceRootDescriptor, ModuleBuildTarget>(context) {
+        @Override
+        public void processDirtyFiles(@NotNull FileProcessor<JavaSourceRootDescriptor, ModuleBuildTarget> processor) throws IOException {
+          FSOperations.processFilesToRecompile(context, chunk, processor);
+        }
+      }, chunk);
+    }
+    catch (IOException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  @Override
+  public void buildFinished(CompileContext context) {
+    final ConcurrentMap<String, Collection<String>> stats = COMPILER_USAGE_STATISTICS.get(context);
+    if (stats.size() == 1) {
+      final Map.Entry<String, Collection<String>> entry = stats.entrySet().iterator().next();
+      final String compilerName = entry.getKey();
+      context.processMessage(new CompilerMessage("", BuildMessage.Kind.JPS_INFO, compilerName + " was used to compile java sources"));
+      LOG.info(compilerName + " was used to compile " + entry.getValue());
+    }
+    else {
+      for (Map.Entry<String, Collection<String>> entry : stats.entrySet()) {
+        final String compilerName = entry.getKey();
+        final Collection<String> moduleNames = entry.getValue();
+        context.processMessage(new CompilerMessage("", BuildMessage.Kind.JPS_INFO,
+          moduleNames.size() == 1 ?
+          compilerName + " was used to compile [" + moduleNames.iterator().next() + "]" :
+          compilerName + " was used to compile " + moduleNames.size() + " modules"
+        ));
+        LOG.info(compilerName + " was used to compile " + moduleNames);
+      }
+    }
   }
 
   @Override
   public List<String> getCompilableFileExtensions() {
-    return Collections.singletonList(JAVA_EXTENSION);
+    return COMPILABLE_EXTENSIONS;
   }
 
   @Override
@@ -171,65 +203,65 @@ public class JavaBuilder extends ModuleLevelBuilder {
   public ExitCode doBuild(@NotNull CompileContext context,
                           @NotNull ModuleChunk chunk,
                           @NotNull DirtyFilesHolder<JavaSourceRootDescriptor, ModuleBuildTarget> dirtyFilesHolder,
-                          @NotNull OutputConsumer outputConsumer, JavaCompilingTool compilingTool) throws ProjectBuildException, IOException {
+                          @NotNull OutputConsumer outputConsumer,
+                          @NotNull JavaCompilingTool compilingTool) throws ProjectBuildException, IOException {
     try {
-      final Set<File> filesToCompile = new THashSet<File>(FileUtil.FILE_HASHING_STRATEGY);
+      final Set<File> filesToCompile = new THashSet<>(FileUtil.FILE_HASHING_STRATEGY);
 
-      dirtyFilesHolder.processDirtyFiles(new FileProcessor<JavaSourceRootDescriptor, ModuleBuildTarget>() {
-        @Override
-        public boolean apply(ModuleBuildTarget target, File file, JavaSourceRootDescriptor descriptor) throws IOException {
-          if (JAVA_SOURCES_FILTER.accept(file) && ourCompilableModuleTypes.contains(target.getModule().getModuleType())) {
-            filesToCompile.add(file);
-          }
-          return true;
+      dirtyFilesHolder.processDirtyFiles((target, file, descriptor) -> {
+        if (JAVA_SOURCES_FILTER.accept(file) && ourCompilableModuleTypes.contains(target.getModule().getModuleType())) {
+          filesToCompile.add(file);
         }
+        return true;
       });
 
-      if (JavaBuilderUtil.isCompileJavaIncrementally(context)) {
-        final ProjectBuilderLogger logger = context.getLoggingManager().getProjectBuilderLogger();
-        if (logger.isEnabled()) {
-          if (!filesToCompile.isEmpty()) {
-            logger.logCompiledFiles(filesToCompile, BUILDER_NAME, "Compiling files:");
+      int javaModulesCount = 0;
+      if ((!filesToCompile.isEmpty() || dirtyFilesHolder.hasRemovedFiles()) &&
+          getTargetPlatformLanguageVersion(chunk.representativeTarget().getModule()) >= 9) {
+        for (ModuleBuildTarget target : chunk.getTargets()) {
+          if (JavaBuilderUtil.findModuleInfoFile(context, target) != null) {
+            javaModulesCount++;
           }
         }
       }
 
-      return compile(context, chunk, dirtyFilesHolder, filesToCompile, outputConsumer, compilingTool);
+      if (JavaBuilderUtil.isCompileJavaIncrementally(context)) {
+        ProjectBuilderLogger logger = context.getLoggingManager().getProjectBuilderLogger();
+        if (logger.isEnabled() && !filesToCompile.isEmpty()) {
+          logger.logCompiledFiles(filesToCompile, BUILDER_NAME, "Compiling files:");
+        }
+      }
+
+      if (javaModulesCount > 1) {
+        String prefix = "Cannot compile a module cycle with multiple module-info.java files: ";
+        String message = chunk.getModules().stream().map(JpsModule::getName).collect(Collectors.joining(", ", prefix, ""));
+        context.processMessage(new CompilerMessage(BUILDER_NAME, BuildMessage.Kind.ERROR, message));
+        return ExitCode.ABORT;
+      }
+
+      return compile(context, chunk, dirtyFilesHolder, filesToCompile, outputConsumer, compilingTool, javaModulesCount > 0);
     }
-    catch (BuildDataCorruptedException e) {
-      throw e;
-    }
-    catch (ProjectBuildException e) {
-      throw e;
-    }
-    catch (PersistentEnumeratorBase.CorruptedException e) {
+    catch (BuildDataCorruptedException | PersistentEnumeratorBase.CorruptedException | ProjectBuildException e) {
       throw e;
     }
     catch (Exception e) {
       LOG.info(e);
       String message = e.getMessage();
-      if (message == null) {
-        final ByteArrayOutputStream out = new ByteArrayOutputStream();
-        final PrintStream stream = new PrintStream(out);
-        try {
-          e.printStackTrace(stream);
-        }
-        finally {
-          stream.close();
-        }
-        message = "Internal error: \n" + out;
+      if (message == null || message.trim().isEmpty()) {
+        message = "Internal error: \n" + ExceptionUtil.getThrowableText(e);
       }
       context.processMessage(new CompilerMessage(BUILDER_NAME, BuildMessage.Kind.ERROR, message));
       throw new StopBuildException();
     }
   }
 
-  private ExitCode compile(final CompileContext context,
+  private ExitCode compile(CompileContext context,
                            ModuleChunk chunk,
                            DirtyFilesHolder<JavaSourceRootDescriptor, ModuleBuildTarget> dirtyFilesHolder,
                            Collection<File> files,
-                           OutputConsumer outputConsumer, @NotNull JavaCompilingTool compilingTool)
-    throws Exception {
+                           OutputConsumer outputConsumer,
+                           JavaCompilingTool compilingTool,
+                           boolean hasModules) throws Exception {
     ExitCode exitCode = ExitCode.NOTHING_DONE;
 
     final boolean hasSourcesToCompile = !files.isEmpty();
@@ -241,23 +273,18 @@ public class JavaBuilder extends ModuleLevelBuilder {
     final ProjectDescriptor pd = context.getProjectDescriptor();
 
     JavaBuilderUtil.ensureModuleHasJdk(chunk.representativeTarget().getModule(), context, BUILDER_NAME);
-    final Collection<File> classpath = ProjectPaths.getCompilationClasspath(chunk, false/*context.isProjectRebuild()*/);
-    final Collection<File> platformCp = ProjectPaths.getPlatformCompilationClasspath(chunk, false/*context.isProjectRebuild()*/);
+    final Collection<File> classpath = ProjectPaths.getCompilationClasspath(chunk, false);
+    final Collection<File> platformCp = ProjectPaths.getPlatformCompilationClasspath(chunk, false);
 
     // begin compilation round
-    final OutputFilesSink outputSink = new OutputFilesSink(context, outputConsumer, JavaBuilderUtil.getDependenciesRegistrar(context), chunk.getPresentableShortName());
+    final OutputFilesSink outputSink =
+      new OutputFilesSink(context, outputConsumer, JavaBuilderUtil.getDependenciesRegistrar(context), chunk.getPresentableShortName());
     Collection<File> filesWithErrors = null;
     try {
       if (hasSourcesToCompile) {
-        final AtomicReference<String> ref = COMPILER_VERSION_INFO.get(context);
-        final String versionInfo = ref.getAndSet(null); // display compiler version info only once per compile session
-        if (versionInfo != null) {
-          LOG.info(versionInfo);
-          context.processMessage(new CompilerMessage("", BuildMessage.Kind.INFO, versionInfo));
-        }
         exitCode = ExitCode.OK;
 
-        final Set<File> srcPath = new HashSet<File>();
+        final Set<File> srcPath = new HashSet<>();
         final BuildRootIndex index = pd.getBuildRootIndex();
         for (ModuleBuildTarget target : chunk.getTargets()) {
           for (JavaSourceRootDescriptor rd : index.getTempTargetRoots(target, context)) {
@@ -265,7 +292,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
           }
         }
         final DiagnosticSink diagnosticSink = new DiagnosticSink(context);
-        
+
         final String chunkName = chunk.getName();
         context.processMessage(new ProgressMessage("Parsing java... [" + chunk.getPresentableShortName() + "]"));
 
@@ -287,28 +314,24 @@ public class JavaBuilder extends ModuleLevelBuilder {
             }
           }
           try {
-            compiledOk = compileJava(context, chunk, files, classpath, platformCp, srcPath, diagnosticSink, outputSink, compilingTool);
+            compiledOk = compileJava(context, chunk, files, classpath, platformCp, srcPath, diagnosticSink, outputSink, compilingTool, hasModules);
           }
           finally {
-            // heuristic: incorrect paths data recovery, so that the next make should not contain non-existing sources in 'recompile' list
             filesWithErrors = diagnosticSink.getFilesWithErrors();
-            for (File file : filesWithErrors) {
-              if (!file.exists()) {
-                FSOperations.markDeleted(context, file);
-              }
-            }
           }
         }
 
         context.checkCanceled();
 
         if (!compiledOk && diagnosticSink.getErrorCount() == 0) {
+          // unexpected exception occurred or compiler did not output any errors for some reason
           diagnosticSink.report(new PlainMessageDiagnostic(Diagnostic.Kind.ERROR, "Compilation failed: internal java compiler error"));
         }
+        if (diagnosticSink.getErrorCount() > 0) {
+          diagnosticSink.report(new JpsInfoDiagnostic("Errors occurred while compiling module '" + chunkName + "'"));
+        }
+
         if (!Utils.PROCEED_ON_ERROR_KEY.get(context, Boolean.FALSE) && diagnosticSink.getErrorCount() > 0) {
-          if (!compiledOk) {
-            diagnosticSink.report(new PlainMessageDiagnostic(Diagnostic.Kind.OTHER, "Errors occurred while compiling module '" + chunkName + "'"));
-          }
           throw new StopBuildException(
             "Compilation failed: errors: " + diagnosticSink.getErrorCount() + "; warnings: " + diagnosticSink.getWarningCount()
           );
@@ -326,145 +349,179 @@ public class JavaBuilder extends ModuleLevelBuilder {
     return exitCode;
   }
 
-  private boolean compileJava(
-    final CompileContext context,
-    ModuleChunk chunk,
-    Collection<File> files,
-    Collection<File> classpath,
-    Collection<File> platformCp,
-    Collection<File> sourcePath,
-    DiagnosticOutputConsumer diagnosticSink,
-    final OutputFileConsumer outputSink, JavaCompilingTool compilingTool) throws Exception {
-
-    final TasksCounter counter = new TasksCounter();
+  private boolean compileJava(CompileContext context,
+                              ModuleChunk chunk,
+                              Collection<File> files,
+                              Collection<File> originalClassPath,
+                              Collection<File> originalPlatformCp,
+                              Collection<File> sourcePath,
+                              DiagnosticOutputConsumer diagnosticSink,
+                              OutputFileConsumer outputSink,
+                              JavaCompilingTool compilingTool,
+                              boolean hasModules) {
+    final Semaphore counter = new Semaphore();
     COUNTER_KEY.set(context, counter);
-
-    final JpsJavaExtensionService javaExt = JpsJavaExtensionService.getInstance();
-    final JpsJavaCompilerConfiguration compilerConfig = javaExt.getCompilerConfiguration(context.getProjectDescriptor().getProject());
-    assert compilerConfig != null;
 
     final Set<JpsModule> modules = chunk.getModules();
     ProcessorConfigProfile profile = null;
+
     if (modules.size() == 1) {
+      final JpsJavaCompilerConfiguration compilerConfig =
+        JpsJavaExtensionService.getInstance().getCompilerConfiguration(context.getProjectDescriptor().getProject());
+      assert compilerConfig != null;
       profile = compilerConfig.getAnnotationProcessingProfile(modules.iterator().next());
     }
     else {
-      String message = validateCycle(chunk, javaExt, compilerConfig, modules);
+      final String message = validateCycle(context, chunk);
       if (message != null) {
         diagnosticSink.report(new PlainMessageDiagnostic(Diagnostic.Kind.ERROR, message));
-        return true;
+        return false;
       }
     }
 
     final Map<File, Set<File>> outs = buildOutputDirectoriesMap(context, chunk);
     try {
-      final int targetLanguageLevel = JpsJavaSdkType.parseVersion(getLanguageLevel(chunk.getModules().iterator().next()));
-      final boolean shouldForkJavac = shouldForkCompilerProcess(context, targetLanguageLevel);
+      final int targetLanguageLevel = getTargetPlatformLanguageVersion(chunk.representativeTarget().getModule());
+      final boolean shouldForkJavac = shouldForkCompilerProcess(context, chunk, targetLanguageLevel);
 
       // when forking external javac, compilers from SDK 1.6 and higher are supported
       Pair<String, Integer> forkSdk = null;
       if (shouldForkJavac) {
         forkSdk = getForkedJavacSdk(chunk, targetLanguageLevel);
         if (forkSdk == null) {
-          diagnosticSink.report(new PlainMessageDiagnostic(Diagnostic.Kind.ERROR, "Cannot start javac process for " + chunk.getName() + ": unknown JDK home path.\nPlease check project configuration."));
-          return true;
+          String text = "Cannot start javac process for " + chunk.getName() + ": unknown JDK home path.\nPlease check project configuration.";
+          diagnosticSink.report(new PlainMessageDiagnostic(Diagnostic.Kind.ERROR, text));
+          return false;
         }
       }
-      
-      final int compilerSdkVersion = forkSdk == null? getCompilerSdkVersion(context) : forkSdk.getSecond();
-      
-      final List<String> options = getCompilationOptions(compilerSdkVersion, context, chunk, profile, compilingTool);
+
+      final int compilerSdkVersion = forkSdk == null ? JavaVersion.current().feature : forkSdk.getSecond();
+
+      final Pair<List<String>, List<String>> vm_compilerOptions = getCompilationOptions(
+        compilerSdkVersion, context, chunk, profile, compilingTool
+      );
+      final List<String> vmOptions = vm_compilerOptions.first;
+      final List<String> options = vm_compilerOptions.second;
+
       if (LOG.isDebugEnabled()) {
-        LOG.debug("Compiling chunk [" + chunk.getName() + "] with options: \"" + StringUtil.join(options, " ") + "\"");
+        String mode = shouldForkJavac ? "fork" : "in-process";
+        LOG.debug("Compiling chunk [" + chunk.getName() + "] with options: \"" + StringUtil.join(options, " ") + "\", mode=" + mode);
       }
 
-      Collection<File> _platformCp = calcEffectivePlatformCp(platformCp, options, compilingTool);
-      if (_platformCp == null) {
-        context.processMessage(
-          new CompilerMessage(
-            BUILDER_NAME, BuildMessage.Kind.ERROR,
-            "Compact compilation profile was requested, but target platform for module \"" + chunk.getName() + "\" differs from javac's platform (" + System.getProperty("java.version") + ")\nCompilation profiles are not supported for such configuration"
-          )
-        );
-        return true;
+      Collection<File> platformCp = calcEffectivePlatformCp(originalPlatformCp, options, compilingTool);
+      if (platformCp == null) {
+        String text = "Compact compilation profile was requested, but target platform for module \"" + chunk.getName() + "\"" +
+                      " differs from javac's platform (" + System.getProperty("java.version") + ")\n" +
+                      "Compilation profiles are not supported for such configuration";
+        context.processMessage(new CompilerMessage(BUILDER_NAME, BuildMessage.Kind.ERROR, text));
+        return false;
       }
 
-      if (!_platformCp.isEmpty()) {
-        final int chunkSdkVersion = getChunkSdkVersion(chunk);
-        if (chunkSdkVersion >= 9) {
-          // if chunk's SDK is 9 or higher, there is no way to specify full platform classpath
-          // because platform classes are stored in jimage binary files with unknown format.
-          // Because of this we are clearing platform classpath so that javac will resolve against its own bootclasspath
-          // and prepending additional jars from the JDK configuration to compilation classpath
-          final Collection<File> joined = new ArrayList<File>(_platformCp.size() + classpath.size());
-          joined.addAll(_platformCp);
-          joined.addAll(classpath);
-          classpath = joined;
-          _platformCp = Collections.emptyList();
-        }
-        else if (shouldUseReleaseOption(context, compilerSdkVersion, chunkSdkVersion, targetLanguageLevel)) {
-          final Collection<File> joined = new ArrayList<File>(classpath.size() + 1);
-          for (File file : _platformCp) {
-            // platform runtime classes will be handled by -release option
-            // include only additional jars from sdk distribution, e.g. tools.jar
-            if (!FileUtil.toSystemIndependentName(file.getAbsolutePath()).contains("/jre/")) {
-              joined.add(file);
-            }
-          }
-          joined.addAll(classpath);
-          classpath = joined;
-          _platformCp = Collections.emptyList();
-        }
+      Collection<File> classPath = originalClassPath;
+      Collection<File> modulePath = Collections.emptyList();
+      Collection<File> upgradeModulePath = Collections.emptyList();
+
+      if (hasModules) {
+        // in Java 9, named modules are not allowed to read classes from the classpath
+        // moreover, the compiler requires all transitive dependencies to be on the module path
+        modulePath = ProjectPaths.getCompilationModulePath(chunk, false);
+        classPath = Collections.emptyList();
+        // modules located above the JDK make a module upgrade path
+        upgradeModulePath = platformCp;
+        platformCp = Collections.emptyList();
+      }
+
+      if (!platformCp.isEmpty() && (getChunkSdkVersion(chunk)) >= 9) {
+        // if chunk's SDK is 9 or higher, there is no way to specify full platform classpath
+        // because platform classes are stored in jimage binary files with unknown format.
+        // Because of this we are clearing platform classpath so that javac will resolve against its own boot classpath
+        // and prepending additional jars from the JDK configuration to compilation classpath
+        classPath = JBIterable.from(platformCp).append(classPath).toList();
+        platformCp = Collections.emptyList();
       }
 
       final ClassProcessingConsumer classesConsumer = new ClassProcessingConsumer(context, outputSink);
       final boolean rc;
       if (!shouldForkJavac) {
+        updateCompilerUsageStatistics(context, compilingTool.getDescription(), chunk);
         rc = JavacMain.compile(
-          options, files, classpath, _platformCp, sourcePath, outs, diagnosticSink, classesConsumer, context.getCancelStatus(), compilingTool
+          options, files, classPath, platformCp, modulePath, upgradeModulePath, sourcePath, outs, diagnosticSink, classesConsumer,
+          context.getCancelStatus(), compilingTool
         );
       }
       else {
-        context.processMessage(new CompilerMessage("", BuildMessage.Kind.INFO, "Using javac "+ forkSdk.getSecond() + " to compile [" + chunk.getPresentableShortName() + "]"));
-        final List<String> vmOptions = getCompilationVMOptions(context, compilingTool);
+        updateCompilerUsageStatistics(context, "javac " + forkSdk.getSecond(), chunk);
         final ExternalJavacManager server = ensureJavacServerStarted(context);
         rc = server.forkJavac(
-          forkSdk.getFirst(), 
-          getExternalJavacHeapSize(context), 
-          vmOptions, options, _platformCp, classpath, sourcePath, 
+          forkSdk.getFirst(),
+          Utils.suggestForkedCompilerHeapSize(),
+          vmOptions, options, platformCp, classPath, upgradeModulePath, modulePath, sourcePath,
           files, outs, diagnosticSink, classesConsumer, compilingTool, context.getCancelStatus()
         );
       }
       return rc;
     }
     finally {
-      counter.await();
+      counter.waitFor();
     }
   }
 
-  private static int getExternalJavacHeapSize(CompileContext context) {
-    final JpsProject project = context.getProjectDescriptor().getProject();
-    final JpsJavaCompilerConfiguration config = JpsJavaExtensionService.getInstance().getOrCreateCompilerConfiguration(project);
-    final JpsJavaCompilerOptions options = config.getCurrentCompilerOptions();
-    return options.MAXIMUM_HEAP_SIZE;
+  private static void updateCompilerUsageStatistics(CompileContext context, String compilerName, ModuleChunk chunk) {
+    final ConcurrentMap<String, Collection<String>> map = COMPILER_USAGE_STATISTICS.get(context);
+    Collection<String> names = map.get(compilerName);
+    if (names == null) {
+      names = Collections.synchronizedSet(new HashSet<>());
+      final Collection<String> prev = map.putIfAbsent(compilerName, names);
+      if (prev != null) {
+        names = prev;
+      }
+    }
+    for (JpsModule module : chunk.getModules()) {
+      names.add(module.getName());
+    }
   }
+
   @Nullable
-  public static String validateCycle(ModuleChunk chunk,
-                                     JpsJavaExtensionService javaExt,
-                                     JpsJavaCompilerConfiguration compilerConfig, Set<JpsModule> modules) {
+  public static String validateCycle(CompileContext context, ModuleChunk chunk) {
+    final JpsJavaExtensionService javaExt = JpsJavaExtensionService.getInstance();
+    final JpsJavaCompilerConfiguration compilerConfig = javaExt.getCompilerConfiguration(context.getProjectDescriptor().getProject());
+    assert compilerConfig != null;
+    final Set<JpsModule> modules = chunk.getModules();
     Pair<String, LanguageLevel> pair = null;
     for (JpsModule module : modules) {
       final LanguageLevel moduleLevel = javaExt.getLanguageLevel(module);
       if (pair == null) {
-        pair = Pair.create(module.getName(), moduleLevel); // first value
+        pair = pair(module.getName(), moduleLevel); // first value
       }
-      else {
-        if (!Comparing.equal(pair.getSecond(), moduleLevel)) {
-          return "Modules " +
-                 pair.getFirst() +
-                 " and " +
-                 module.getName() +
-                 " must have the same language level because of cyclic dependencies between them";
+      else if (!Comparing.equal(pair.getSecond(), moduleLevel)) {
+        return "Modules " + pair.getFirst() + " and " + module.getName() +
+               " must have the same language level because of cyclic dependencies between them";
+      }
+    }
+
+    final JpsJavaCompilerOptions compilerOptions = compilerConfig.getCurrentCompilerOptions();
+    final Map<String, String> overrideMap = compilerOptions.ADDITIONAL_OPTIONS_OVERRIDE;
+    if (!overrideMap.isEmpty()) {
+      // check that options are consistently overridden for all modules in the cycle
+      Pair<String, Set<String>> overridden = null;
+      for (JpsModule module : modules) {
+        final String opts = overrideMap.get(module.getName());
+        if (!StringUtil.isEmptyOrSpaces(opts)) {
+          final Set<String> parsed = parseOptions(opts);
+          if (overridden == null) {
+            overridden = pair(module.getName(), parsed);
+          }
+          else {
+            if (!overridden.second.equals(parsed)) {
+              return "Modules " + overridden.first + " and " + module.getName() + " must have the same 'additional command line parameters' specified because of cyclic dependencies between them";
+            }
+          }
+        }
+        else {
+          context.processMessage(new CompilerMessage(
+            BUILDER_NAME, BuildMessage.Kind.WARNING,
+            "Some modules with cyclic dependencies [" + chunk.getName() + "] have 'additional command line parameters' overridden in project settings.\nThese compilation options were applied to all modules in the cycle."
+          ));
         }
       }
     }
@@ -481,38 +538,80 @@ public class JavaBuilder extends ModuleLevelBuilder {
     return null;
   }
 
-  private static boolean shouldUseReleaseOption(CompileContext context, int compilerVersion, int chunkSdkVersion, int targetLanguageLevel) {
-    // -release option makes sense for javac only and is supported in java9+ and higher
-    if (compilerVersion >= 9 && chunkSdkVersion > 0 && targetLanguageLevel > 0 && isJavac(COMPILING_TOOL.get(context))) {
+  private static Set<String> parseOptions(String str) {
+    final Set<String> result = new SmartHashSet<>();
+    StringTokenizer t = new StringTokenizer(str, " \n\t", false);
+    while (t.hasMoreTokens()) {
+      result.add(t.nextToken());
+    }
+    return result;
+  }
+
+  private static boolean shouldUseReleaseOption(JpsJavaCompilerConfiguration config, int compilerVersion, int chunkSdkVersion, int targetPlatformVersion) {
+    if (!config.useReleaseOption()) {
+      return false;
+    }
+    // --release option is supported in java9+ and higher
+    if (compilerVersion >= 9 && chunkSdkVersion > 0 && targetPlatformVersion > 0) {
       if (chunkSdkVersion < 9) {
         // target sdk is set explicitly and differs from compiler SDK, so for consistency we should link against it
         return false;
       }
       // chunkSdkVersion >= 9, so we have no rt.jar anymore and '-release' is the only cross-compilation option available
-      return true;
+      // Only specify '--release' when cross-compilation is indeed really required.
+      // Otherwise '--release' may not be compatible with other compilation options, e.g. exporting a package from system module
+      return compilerVersion != targetPlatformVersion;
     }
     return false;
   }
 
-  private static boolean shouldForkCompilerProcess(CompileContext context, int chunkLanguageLevel) {
+  private static boolean shouldForkCompilerProcess(CompileContext context, ModuleChunk chunk, int chunkLanguageLevel) {
     if (!isJavac(COMPILING_TOOL.get(context))) {
-      return false;
+      return false; // applicable to javac only
     }
-    final int compilerSdkVersion = getCompilerSdkVersion(context);
+    final int compilerSdkVersion = JavaVersion.current().feature;
+
+    if (preferTargetJdkCompiler(context)) {
+      final Pair<JpsSdk<JpsDummyElement>, Integer> sdkVersionPair = getAssociatedSdk(chunk);
+      if (sdkVersionPair != null) {
+        final Integer chunkSdkVersion = sdkVersionPair.second;
+        if (chunkSdkVersion != compilerSdkVersion && chunkSdkVersion >= 6 /*min. supported compiler version*/) {
+          // there is a special case because of difference in type inference behavior between javac8 and javac6-javac7
+          // so if corresponding JDK is associated with the module chunk, prefer compiler from this JDK over the newer compiler version
+          return true;
+        }
+      }
+    }
+
     if (compilerSdkVersion < 9 || chunkLanguageLevel <= 0) {
       // javac up to version 9 supports all previous releases
-      // or: was not able to determine jdk version, so assuming in-process compiler
+      // or
+      // was not able to determine jdk version, so assuming in-process compiler
       return false;
     }
-    // compilerSdkVersion is 9+ here, so applying JEP 182 "Retiring javac 'one plus three back'" policy
-    return Math.abs(compilerSdkVersion - chunkLanguageLevel) > 3;
+    // compiler version is 9+ here, so:
+    //  - java 5 and older are not supported for sure
+    //  - applying '5 versions back' policy deduced from the current behavior of those JDKs
+    return chunkLanguageLevel < 6 || Math.abs(compilerSdkVersion - chunkLanguageLevel) > 5;
   }
-  
+
   private static boolean isJavac(final JavaCompilingTool compilingTool) {
     return compilingTool != null && (compilingTool.getId() == JavaCompilers.JAVAC_ID || compilingTool.getId() == JavaCompilers.JAVAC_API_ID);
   }
 
-  // If platformCp of the build process is the same as the target plafform, do not specify platformCp explicitly
+  private static boolean preferTargetJdkCompiler(CompileContext context) {
+    Boolean val = PREFER_TARGET_JDK_COMPILER.get(context);
+    if (val == null) {
+      final JpsProject project = context.getProjectDescriptor().getProject();
+      final JpsJavaCompilerConfiguration config = JpsJavaExtensionService.getInstance().getCompilerConfiguration(project);
+      // default
+      val = config != null? config.getCompilerOptions(JavaCompilers.JAVAC_ID).PREFER_TARGET_JDK_COMPILER : Boolean.TRUE;
+      PREFER_TARGET_JDK_COMPILER.set(context, val);
+    }
+    return val;
+  }
+
+  // If platformCp of the build process is the same as the target platform, do not specify platformCp explicitly
   // this will allow javac to resolve against ct.sym file, which is required for the "compilation profiles" feature
   @Nullable
   private static Collection<File> calcEffectivePlatformCp(Collection<File> platformCp, List<String> options, JavaCompilingTool compilingTool) {
@@ -538,37 +637,35 @@ public class JavaBuilder extends ModuleLevelBuilder {
     }
     if (!isTargetPlatformSameAsBuildRuntime) {
       // compact profile was requested, but we have to use alternative platform classpath to meet project settings
-      // consider this a compile error and let user re-configure the project 
+      // consider this a compile error and let user re-configure the project
       return null;
     }
-    // returning empty list will force default behaviour for platform classpath calculation 
-    // javac will resolve against its own bootclasspath and use ct.sym file when available 
+    // returning empty list will force default behaviour for platform classpath calculation
+    // javac will resolve against its own bootclasspath and use ct.sym file when available
     return Collections.emptyList();
   }
 
   private void submitAsyncTask(final CompileContext context, final Runnable taskRunnable) {
-    final TasksCounter counter = COUNTER_KEY.get(context);
+    Semaphore counter = COUNTER_KEY.get(context);
 
     assert counter != null;
 
-    counter.incTaskCount();
-    myTaskRunner.execute(new Runnable() {
-      @Override
-      public void run() {
-        try {
-          taskRunnable.run();
-        }
-        catch (Throwable e) {
-          context.processMessage(new CompilerMessage(BUILDER_NAME, e));
-        }
-        finally {
-          counter.decTaskCounter();
-        }
+    counter.down();
+    myTaskRunner.execute(() -> {
+      try {
+        taskRunnable.run();
+      }
+      catch (Throwable e) {
+        context.processMessage(new CompilerMessage(BUILDER_NAME, e));
+      }
+      finally {
+        counter.up();
       }
     });
   }
 
-  private static synchronized ExternalJavacManager ensureJavacServerStarted(@NotNull CompileContext context) throws Exception {
+  @NotNull
+  private static synchronized ExternalJavacManager ensureJavacServerStarted(@NotNull CompileContext context) {
     ExternalJavacManager server = ExternalJavacManager.KEY.get(context);
     if (server != null) {
       return server;
@@ -616,54 +713,106 @@ public class JavaBuilder extends ModuleLevelBuilder {
     }
   }
 
-  private static final Key<List<String>> JAVAC_OPTIONS = Key.create("_javac_options_");
-  private static final Key<List<String>> JAVAC_VM_OPTIONS = Key.create("_javac_vm_options_");
   private static final Key<String> USER_DEFINED_BYTECODE_TARGET = Key.create("_user_defined_bytecode_target_");
 
-  private static List<String> getCompilationVMOptions(CompileContext context, JavaCompilingTool compilingTool) {
-    List<String> cached = JAVAC_VM_OPTIONS.get(context);
-    if (cached == null) {
-      loadCommonJavacOptions(context, compilingTool);
-      cached = JAVAC_VM_OPTIONS.get(context);
+  private static Pair<List<String>, List<String>> getCompilationOptions(int compilerSdkVersion,
+                                                                        CompileContext context,
+                                                                        ModuleChunk chunk,
+                                                                        @Nullable ProcessorConfigProfile profile,
+                                                                        @NotNull JavaCompilingTool compilingTool) {
+    final List<String> compilationOptions = new ArrayList<>();
+    final List<String> vmOptions = new ArrayList<>();
+    final JpsProject project = context.getProjectDescriptor().getProject();
+    final JpsJavaCompilerOptions compilerOptions = JpsJavaExtensionService.getInstance().getOrCreateCompilerConfiguration(project).getCurrentCompilerOptions();
+    if (compilerOptions.DEBUGGING_INFO) {
+      compilationOptions.add("-g");
     }
-    return cached;
-  }
-
-  private static List<String> getCompilationOptions(
-    final int compilerSdkVersion, CompileContext context, ModuleChunk chunk, @Nullable ProcessorConfigProfile profile, @NotNull JavaCompilingTool compilingTool) {
-    
-    List<String> cached = JAVAC_OPTIONS.get(context);
-    if (cached == null) {
-      loadCommonJavacOptions(context, compilingTool);
-      cached = JAVAC_OPTIONS.get(context);
-      assert cached != null : context;
+    if (compilerOptions.DEPRECATION) {
+      compilationOptions.add("-deprecation");
     }
-
-    List<String> options = new ArrayList<String>();
-    JpsModule module = chunk.representativeTarget().getModule();
-    File baseDirectory = JpsModelSerializationDataService.getBaseDirectory(module);
-    if (baseDirectory != null) {
-      //this is a temporary workaround to allow passing per-module compiler options for Eclipse compiler in form
-      // -properties $MODULE_DIR$/.settings/org.eclipse.jdt.core.prefs
-      String stringToReplace = "$" + PathMacroUtil.MODULE_DIR_MACRO_NAME + "$";
-      String moduleDirPath = FileUtil.toCanonicalPath(baseDirectory.getAbsolutePath());
-      for (String s : cached) {
-        options.add(StringUtil.replace(s, stringToReplace, moduleDirPath));
+    if (compilerOptions.GENERATE_NO_WARNINGS) {
+      compilationOptions.add("-nowarn");
+    }
+    if (compilerOptions instanceof EclipseCompilerOptions) {
+      final EclipseCompilerOptions eclipseOptions = (EclipseCompilerOptions)compilerOptions;
+      if (eclipseOptions.PROCEED_ON_ERROR) {
+        Utils.PROCEED_ON_ERROR_KEY.set(context, Boolean.TRUE);
+        compilationOptions.add("-proceedOnError");
       }
     }
-    else {
-      options.addAll(cached);
+
+    String customArgs = compilerOptions.ADDITIONAL_OPTIONS_STRING;
+    final Map<String, String> overrideMap = compilerOptions.ADDITIONAL_OPTIONS_OVERRIDE;
+    if (!overrideMap.isEmpty()) {
+      for (JpsModule m : chunk.getModules()) {
+        final String overridden = overrideMap.get(m.getName());
+        if (overridden != null) {
+          customArgs = overridden;
+          break;
+        }
+      }
     }
-    addCompilationOptions(compilerSdkVersion, options, context, chunk, profile);
-    return options;
+
+    if (customArgs != null) {
+      BiConsumer<List<String>, String> appender = List::add;
+      final JpsModule module = chunk.representativeTarget().getModule();
+      final File baseDirectory = JpsModelSerializationDataService.getBaseDirectory(module);
+      if (baseDirectory != null) {
+        //this is a temporary workaround to allow passing per-module compiler options for Eclipse compiler in form
+        // -properties $MODULE_DIR$/.settings/org.eclipse.jdt.core.prefs
+        final String moduleDirPath = FileUtil.toCanonicalPath(baseDirectory.getAbsolutePath());
+        appender = (strings, option) -> strings.add(StringUtil.replace(option, PathMacroUtil.DEPRECATED_MODULE_DIR, moduleDirPath));
+      }
+
+      boolean skip = false;
+      boolean targetOptionFound = false;
+      for (final String userOption : ParametersListUtil.parse(customArgs)) {
+        if (FILTERED_OPTIONS.contains(userOption)) {
+          skip = true;
+          targetOptionFound = "-target".equals(userOption);
+          continue;
+        }
+        if (skip) {
+          skip = false;
+          if (targetOptionFound) {
+            targetOptionFound = false;
+            USER_DEFINED_BYTECODE_TARGET.set(context, userOption);
+          }
+        }
+        else {
+          if (!FILTERED_SINGLE_OPTIONS.contains(userOption)) {
+            if (userOption.startsWith("-J-")) {
+              vmOptions.add(userOption.substring("-J".length()));
+            }
+            else {
+              appender.accept(compilationOptions, userOption);
+            }
+          }
+        }
+      }
+    }
+
+    for (ExternalJavacOptionsProvider extension : JpsServiceManager.getInstance().getExtensions(ExternalJavacOptionsProvider.class)) {
+      vmOptions.addAll(extension.getOptions(compilingTool));
+    }
+
+    addCompilationOptions(compilerSdkVersion, compilationOptions, context, chunk, profile);
+
+    return pair(vmOptions, compilationOptions);
   }
 
-  public static void addCompilationOptions(List<String> options, CompileContext context, ModuleChunk chunk, @Nullable ProcessorConfigProfile profile) {
-    addCompilationOptions(getCompilerSdkVersion(context), options, context, chunk, profile);
+  public static void addCompilationOptions(List<String> options,
+                                           CompileContext context,
+                                           ModuleChunk chunk,
+                                           @Nullable ProcessorConfigProfile profile) {
+    addCompilationOptions(JavaVersion.current().feature, options, context, chunk, profile);
   }
-  
-  public static void addCompilationOptions(final int compilerSdkVersion, List<String> options, CompileContext context, ModuleChunk chunk, @Nullable ProcessorConfigProfile profile) {
-    if (!isEncodingSet(options)) {
+
+  private static void addCompilationOptions(int compilerSdkVersion,
+                                            List<String> options,
+                                            CompileContext context, ModuleChunk chunk,
+                                            @Nullable ProcessorConfigProfile profile) {
+    if (!options.contains("-encoding")) {
       final CompilerEncodingConfiguration config = context.getProjectDescriptor().getEncodingConfiguration();
       final String encoding = config.getPreferredModuleChunkEncoding(chunk);
       if (config.getAllModuleChunkEncodings(chunk).size() > 1) {
@@ -682,12 +831,19 @@ public class JavaBuilder extends ModuleLevelBuilder {
 
     addCrossCompilationOptions(compilerSdkVersion, options, context, chunk);
 
+    if (!options.contains("--enable-preview")) {
+      LanguageLevel level = JpsJavaExtensionService.getInstance().getLanguageLevel(chunk.representativeTarget().getModule());
+      if (level != null && level.isPreview()) {
+        options.add("--enable-preview");
+      }
+    }
+
     if (addAnnotationProcessingOptions(options, profile)) {
       final File srcOutput = ProjectPaths.getAnnotationProcessorGeneratedSourcesOutputDir(
         chunk.getModules().iterator().next(), chunk.containsTests(), profile
       );
       if (srcOutput != null) {
-        srcOutput.mkdirs();
+        FileUtil.createDirectory(srcOutput);
         options.add("-s");
         options.add(srcOutput.getPath());
       }
@@ -695,11 +851,9 @@ public class JavaBuilder extends ModuleLevelBuilder {
   }
 
   /**
-   * @param options
-   * @param profile
    * @return true if annotation processing is enabled and corresponding options were added, false if profile is null or disabled
    */
-  public static boolean addAnnotationProcessingOptions(List<String> options, @Nullable AnnotationProcessingConfiguration profile) {
+  public static boolean addAnnotationProcessingOptions(List<? super String> options, @Nullable AnnotationProcessingConfiguration profile) {
     if (profile == null || !profile.isEnabled()) {
       options.add("-proc:none");
       return false;
@@ -724,103 +878,119 @@ public class JavaBuilder extends ModuleLevelBuilder {
     return true;
   }
 
+  @NotNull
+  public static String getUsedCompilerId(CompileContext context) {
+    final JpsProject project = context.getProjectDescriptor().getProject();
+    final JpsJavaCompilerConfiguration config = JpsJavaExtensionService.getInstance().getCompilerConfiguration(project);
+    return config == null ? JavaCompilers.JAVAC_ID : config.getJavaCompilerId();
+  }
 
-  private static void addCrossCompilationOptions(final int compilerSdkVersion, final List<String> options, final CompileContext context, final ModuleChunk chunk) {
+  private static void addCrossCompilationOptions(int compilerSdkVersion, List<String> options, CompileContext context, ModuleChunk chunk) {
     final JpsJavaCompilerConfiguration compilerConfiguration = JpsJavaExtensionService.getInstance().getOrCreateCompilerConfiguration(
       context.getProjectDescriptor().getProject()
     );
 
-    final String langLevel = getLanguageLevel(chunk.getModules().iterator().next());
+    final int languageLevel = getLanguageLevel(chunk.representativeTarget().getModule());
     final int chunkSdkVersion = getChunkSdkVersion(chunk);
 
-    final int targetLanguageLevel = JpsJavaSdkType.parseVersion(langLevel);
-    if (shouldUseReleaseOption(context, compilerSdkVersion, chunkSdkVersion, targetLanguageLevel)) {
-      options.add("-release");
-      options.add(String.valueOf(targetLanguageLevel));
+    int bytecodeTarget = getModuleBytecodeTarget(context, chunk, compilerConfiguration, languageLevel);
+
+    if (shouldUseReleaseOption(compilerConfiguration, compilerSdkVersion, chunkSdkVersion, bytecodeTarget)) {
+      options.add("--release");
+      options.add(complianceOption(bytecodeTarget));
       return;
     }
+
     // using older -source, -target and -bootclasspath options
-    if (!StringUtil.isEmpty(langLevel)) {
+    if (languageLevel > 0) {
       options.add("-source");
-      options.add(langLevel);
+      options.add(complianceOption(languageLevel));
     }
 
-    String bytecodeTarget = null;
-    for (JpsModule module : chunk.getModules()) {
-      final String moduleTarget = compilerConfiguration.getByteCodeTargetLevel(module.getName());
-      if (moduleTarget == null) {
-        continue;
-      }
-      if (bytecodeTarget == null) {
-        bytecodeTarget = moduleTarget;
-      }
-      else {
-        if (moduleTarget.compareTo(bytecodeTarget) < 0) {
-          bytecodeTarget = moduleTarget; // use the lower possible target among modules that form the chunk
-        }
-      }
-    }
-
-    if (bytecodeTarget == null) {
-      if (!StringUtil.isEmpty(langLevel)) {
-        // according to IDEA rule: if not specified explicitly, set target to be the same as source language level
-        bytecodeTarget = langLevel;
-      }
-      else {
-        // last resort and backward compatibility: 
-        // check if user explicitly defined bytecode target in additional compiler options
-        bytecodeTarget = USER_DEFINED_BYTECODE_TARGET.get(context);
-      }
-    }
-
-    if (bytecodeTarget != null) {
-      options.add("-target");
-      if (chunkSdkVersion > 0 && compilerSdkVersion > chunkSdkVersion) { 
+    if (bytecodeTarget > 0) {
+      if (chunkSdkVersion > 0 && compilerSdkVersion > chunkSdkVersion) {
         // if compiler is newer than module JDK
-        final int userSpecifiedTargetVersion = JpsJavaSdkType.parseVersion(bytecodeTarget);
-        if (userSpecifiedTargetVersion > 0 && userSpecifiedTargetVersion <= compilerSdkVersion) {
+        if (compilerSdkVersion >= bytecodeTarget) {
           // if user-specified bytecode version can be determined and is supported by compiler
-          if (userSpecifiedTargetVersion > chunkSdkVersion) {
+          if (bytecodeTarget > chunkSdkVersion) {
             // and user-specified bytecode target level is higher than the highest one supported by the target JDK,
             // force compiler to use highest-available bytecode target version that is supported by the chunk JDK.
-            bytecodeTarget = "1." + chunkSdkVersion;
+            bytecodeTarget = chunkSdkVersion;
           }
         }
         // otherwise let compiler display compilation error about incorrectly set bytecode target version
       }
-      options.add(bytecodeTarget);
     }
     else {
       if (chunkSdkVersion > 0 && compilerSdkVersion > chunkSdkVersion) {
-        // force lower bytecode target level to match the version of sdk assigned to this chunk
-        options.add("-target");
-        options.add("1." + chunkSdkVersion);
+        // force lower bytecode target level to match the version of the chunk JDK
+        bytecodeTarget = chunkSdkVersion;
       }
+    }
+
+    if (bytecodeTarget > 0) {
+      options.add("-target");
+      options.add(complianceOption(bytecodeTarget));
     }
   }
 
-  private static String getLanguageLevel(JpsModule module) {
+  public static int getModuleBytecodeTarget(CompileContext context, ModuleChunk chunk, JpsJavaCompilerConfiguration compilerConfiguration) {
+    return getModuleBytecodeTarget(context, chunk, compilerConfiguration, getLanguageLevel(chunk.representativeTarget().getModule()));
+  }
+
+  private static int getModuleBytecodeTarget(CompileContext context, ModuleChunk chunk, JpsJavaCompilerConfiguration compilerConfiguration, int languageLevel) {
+    int bytecodeTarget = 0;
+    for (JpsModule module : chunk.getModules()) {
+      // use the lower possible target among modules that form the chunk
+      final int moduleTarget = JpsJavaSdkType.parseVersion(compilerConfiguration.getByteCodeTargetLevel(module.getName()));
+      if (moduleTarget > 0 && (bytecodeTarget == 0 || moduleTarget < bytecodeTarget)) {
+        bytecodeTarget = moduleTarget;
+      }
+    }
+    if (bytecodeTarget == 0) {
+      if (languageLevel > 0) {
+        // according to IDEA rule: if not specified explicitly, set target to be the same as source language level
+        bytecodeTarget = languageLevel;
+      }
+      else {
+        // last resort and backward compatibility:
+        // check if user explicitly defined bytecode target in additional compiler options
+        String value = USER_DEFINED_BYTECODE_TARGET.get(context);
+        if (value != null) {
+          bytecodeTarget = JpsJavaSdkType.parseVersion(value);
+        }
+      }
+    }
+    return bytecodeTarget;
+  }
+
+  private static String complianceOption(int major) {
+    return JpsJavaSdkType.complianceOption(JavaVersion.compose(major));
+  }
+
+  private static int getLanguageLevel(@NotNull JpsModule module) {
     final LanguageLevel level = JpsJavaExtensionService.getInstance().getLanguageLevel(module);
-    return level != null ? level.getComplianceOption() : null;
+    return level != null ? level.toJavaVersion().feature : 0;
   }
 
-  private static boolean isEncodingSet(List<String> options) {
-    for (String option : options) {
-      if ("-encoding".equals(option)) {
-        return true;
-      }
+  /**
+   * The assumed module's source code language version.
+   * Returns the version number, corresponding to the language level, associated with the given module.
+   * If no language level set (neither on module- nor on project-level), the version of JDK associated with the module is returned.
+   * If no JDK is associated, returns 0.
+   */
+  private static int getTargetPlatformLanguageVersion(@NotNull JpsModule module) {
+    final int level = getLanguageLevel(module);
+    if (level > 0) {
+      return level;
     }
-    return false;
-  }
-
-  private static int getCompilerSdkVersion(CompileContext context) {
-    final Integer cached = JAVA_COMPILER_VERSION_KEY.get(context);
-    if (cached != null) {
-      return cached;
+    // when compiling, if language level is not explicitly set, it is assumed to be equal to
+    // the highest possible language level supported by target JDK
+    final JpsSdk<JpsDummyElement> sdk = module.getSdk(JpsJavaSdkType.INSTANCE);
+    if (sdk != null) {
+      return JpsJavaSdkType.getJavaVersion(sdk);
     }
-    int javaVersion = JpsJavaSdkType.parseVersion(SystemProperties.getJavaVersion());
-    JAVA_COMPILER_VERSION_KEY.set(context, javaVersion);
-    return javaVersion;
+    return 0;
   }
 
   private static int getChunkSdkVersion(ModuleChunk chunk) {
@@ -828,8 +998,8 @@ public class JavaBuilder extends ModuleLevelBuilder {
     for (JpsModule module : chunk.getModules()) {
       final JpsSdk<JpsDummyElement> sdk = module.getSdk(JpsJavaSdkType.INSTANCE);
       if (sdk != null) {
-        final int moduleSdkVersion = JpsJavaSdkType.parseVersion(sdk.getVersionString());
-        if (moduleSdkVersion != 0 /*could determine the version*/&& (chunkSdkVersion < 0 || chunkSdkVersion > moduleSdkVersion)) {
+        final int moduleSdkVersion = JpsJavaSdkType.getJavaVersion(sdk);
+        if (moduleSdkVersion != 0 /*could determine the version*/ && (chunkSdkVersion < 0 || chunkSdkVersion > moduleSdkVersion)) {
           chunkSdkVersion = moduleSdkVersion;
         }
       }
@@ -839,16 +1009,12 @@ public class JavaBuilder extends ModuleLevelBuilder {
 
   @Nullable
   private static Pair<String, Integer> getForkedJavacSdk(ModuleChunk chunk, int targetLanguageLevel) {
-    for (JpsModule module : chunk.getModules()) {
-      final JpsSdk<JpsDummyElement> sdk = module.getSdk(JpsJavaSdkType.INSTANCE);
-      if (sdk != null) {
-        final int version = JpsJavaSdkType.parseVersion(sdk.getVersionString());
-        if (version >= 6) {
-          if (version >= 9 && Math.abs(version - targetLanguageLevel) > 3) {
-            continue; // current javac compiler does not support required language level
-          }
-          return Pair.create(sdk.getHomePath(), version);
-        }
+    final Pair<JpsSdk<JpsDummyElement>, Integer> sdkVersionPair = getAssociatedSdk(chunk);
+    if (sdkVersionPair != null) {
+      final int sdkVersion = sdkVersionPair.second;
+      if (sdkVersion >= 6 && (sdkVersion < 9 || Math.abs(sdkVersion - targetLanguageLevel) <= 3)) {
+        // current javac compiler does support required language level
+        return pair(sdkVersionPair.first.getHomePath(), sdkVersion);
       }
     }
     final String fallbackJdkHome = System.getProperty(GlobalOptions.FALLBACK_JDK_HOME, null);
@@ -863,70 +1029,19 @@ public class JavaBuilder extends ModuleLevelBuilder {
     }
     final int fallbackVersion = JpsJavaSdkType.parseVersion(fallbackJdkVersion);
     if (fallbackVersion < 6) {
-      LOG.info("Version string for fallback JDK is '" + fallbackJdkVersion + "' (recognized as version '" + fallbackJdkVersion + "'). At least version 6 is required.");
+      LOG.info("Version string for fallback JDK is '" + fallbackJdkVersion + "' (recognized as version '" + fallbackVersion + "')." +
+               " At least version 6 is required.");
       return null;
     }
-    return Pair.create(fallbackJdkHome, fallbackVersion); 
+    return pair(fallbackJdkHome, fallbackVersion);
   }
 
-  private static void loadCommonJavacOptions(@NotNull CompileContext context, @NotNull JavaCompilingTool compilingTool) {
-    final List<String> options = new ArrayList<String>();
-    final List<String> vmOptions = new ArrayList<String>();
-
-    final JpsProject project = context.getProjectDescriptor().getProject();
-    final JpsJavaCompilerConfiguration compilerConfig = JpsJavaExtensionService.getInstance().getOrCreateCompilerConfiguration(project);
-    final JpsJavaCompilerOptions compilerOptions = compilerConfig.getCurrentCompilerOptions();
-    if (compilerOptions.DEBUGGING_INFO) {
-      options.add("-g");
-    }
-    if (compilerOptions.DEPRECATION) {
-      options.add("-deprecation");
-    }
-    if (compilerOptions.GENERATE_NO_WARNINGS) {
-      options.add("-nowarn");
-    }
-    if (compilerOptions instanceof EclipseCompilerOptions) {
-      final EclipseCompilerOptions eclipseOptions = (EclipseCompilerOptions)compilerOptions;
-      if (eclipseOptions.PROCEED_ON_ERROR) {
-        options.add("-proceedOnError");
-      }
-    }
-    final String customArgs = compilerOptions.ADDITIONAL_OPTIONS_STRING;
-    if (customArgs != null) {
-      final StringTokenizer customOptsTokenizer = new StringTokenizer(customArgs, " \t\r\n");
-      boolean skip = false;
-      boolean targetOptionFound = false;
-      while (customOptsTokenizer.hasMoreTokens()) {
-        final String userOption = customOptsTokenizer.nextToken();
-        if (FILTERED_OPTIONS.contains(userOption)) {
-          skip = true;
-          targetOptionFound = "-target".equals(userOption);
-          continue;
-        }
-        if (skip) {
-          skip = false;
-          if (targetOptionFound) {
-            targetOptionFound = false;
-            USER_DEFINED_BYTECODE_TARGET.set(context, userOption);
-          }
-        }
-        else {
-          if (!FILTERED_SINGLE_OPTIONS.contains(userOption)) {
-            if (userOption.startsWith("-J-")) {
-              vmOptions.add(userOption.substring("-J".length()));
-            }
-            else {
-              options.add(userOption);
-            }
-          }
-        }
-      }
-    }
-
-    compilingTool.processCompilerOptions(context, options);
-
-    JAVAC_OPTIONS.set(context, options);
-    JAVAC_VM_OPTIONS.set(context, vmOptions);
+  @Nullable
+  private static Pair<JpsSdk<JpsDummyElement>, Integer> getAssociatedSdk(ModuleChunk chunk) {
+    // assuming all modules in the chunk have the same associated JDK;
+    // this constraint should be validated on build start
+    final JpsSdk<JpsDummyElement> sdk = chunk.representativeTarget().getModule().getSdk(JpsJavaSdkType.INSTANCE);
+    return sdk != null ? pair(sdk, JpsJavaSdkType.getJavaVersion(sdk)) : null;
   }
 
   @Override
@@ -935,13 +1050,13 @@ public class JavaBuilder extends ModuleLevelBuilder {
   }
 
   private static Map<File, Set<File>> buildOutputDirectoriesMap(CompileContext context, ModuleChunk chunk) {
-    final Map<File, Set<File>> map = new THashMap<File, Set<File>>(FileUtil.FILE_HASHING_STRATEGY);
+    final Map<File, Set<File>> map = new THashMap<>(FileUtil.FILE_HASHING_STRATEGY);
     for (ModuleBuildTarget target : chunk.getTargets()) {
       final File outputDir = target.getOutputDir();
       if (outputDir == null) {
         continue;
       }
-      final Set<File> roots = new THashSet<File>(FileUtil.FILE_HASHING_STRATEGY);
+      final Set<File> roots = new THashSet<>(FileUtil.FILE_HASHING_STRATEGY);
       for (JavaSourceRootDescriptor descriptor : context.getProjectDescriptor().getBuildRootIndex().getTargetRoots(target, context)) {
         roots.add(descriptor.root);
       }
@@ -954,7 +1069,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
     private final CompileContext myContext;
     private volatile int myErrorCount;
     private volatile int myWarningCount;
-    private final Set<File> myFilesWithErrors = new THashSet<File>(FileUtil.FILE_HASHING_STRATEGY);
+    private final Set<File> myFilesWithErrors = new THashSet<>(FileUtil.FILE_HASHING_STRATEGY);
 
     private DiagnosticSink(CompileContext context) {
       myContext = context;
@@ -974,6 +1089,16 @@ public class JavaBuilder extends ModuleLevelBuilder {
       //    }
       //  }
       //});
+    }
+
+    @Override
+    public void customOutputData(String pluginId, String dataName, byte[] data) {
+      for (CustomOutputDataListener listener : JpsServiceManager.getInstance().getExtensions(CustomOutputDataListener.class)) {
+        if (pluginId.equals(listener.getId())) {
+          listener.processData(dataName, data);
+          return;
+        }
+      }
     }
 
     @Override
@@ -1026,15 +1151,20 @@ public class JavaBuilder extends ModuleLevelBuilder {
           myWarningCount++;
           break;
         case NOTE:
-        default:
           kind = BuildMessage.Kind.INFO;
+          break;
+        case OTHER:
+          kind = diagnostic instanceof JpsInfoDiagnostic? BuildMessage.Kind.JPS_INFO : BuildMessage.Kind.OTHER;
+          break;
+        default:
+          kind = BuildMessage.Kind.OTHER;
       }
       File sourceFile = null;
       try {
         // for eclipse compiler just an attempt to call getSource() may lead to an NPE,
         // so calling this method under try/catch to avoid induced compiler errors
         final JavaFileObject source = diagnostic.getSource();
-        sourceFile = source != null ? Utils.convertToFile(source.toUri()) : null;
+        sourceFile = source != null ? PathUtils.convertToFile(source.toUri()) : null;
       }
       catch (Exception e) {
         LOG.info(e);
@@ -1064,16 +1194,16 @@ public class JavaBuilder extends ModuleLevelBuilder {
       myContext.processMessage(compilerMsg);
     }
 
-    public int getErrorCount() {
+    int getErrorCount() {
       return myErrorCount;
     }
 
-    public int getWarningCount() {
+    int getWarningCount() {
       return myWarningCount;
     }
 
     @NotNull
-    public Collection<File> getFilesWithErrors() {
+    Collection<File> getFilesWithErrors() {
       return myFilesWithErrors;
     }
   }
@@ -1084,11 +1214,8 @@ public class JavaBuilder extends ModuleLevelBuilder {
 
     private ClassProcessingConsumer(CompileContext context, OutputFileConsumer sink) {
       myContext = context;
-      myDelegateOutputFileSink = sink != null ? sink : new OutputFileConsumer() {
-        @Override
-        public void save(@NotNull OutputFileObject fileObject) {
-          throw new RuntimeException("Output sink for compiler was not specified");
-        }
+      myDelegateOutputFileSink = sink != null ? sink : fileObject -> {
+        throw new RuntimeException("Output sink for compiler was not specified");
       };
     }
 
@@ -1110,47 +1237,23 @@ public class JavaBuilder extends ModuleLevelBuilder {
         myContext.processMessage(new CompilerMessage(BUILDER_NAME, BuildMessage.Kind.ERROR, e.getMessage()));
       }
 
-      submitAsyncTask(myContext, new Runnable() {
-        @Override
-        public void run() {
-          try {
-            for (ClassPostProcessor processor : ourClassProcessors) {
-              processor.process(myContext, fileObject);
-            }
+      submitAsyncTask(myContext, () -> {
+        try {
+          for (ClassPostProcessor processor : ourClassProcessors) {
+            processor.process(myContext, fileObject);
           }
-          finally {
-            myDelegateOutputFileSink.save(fileObject);
-          }
+        }
+        finally {
+          myDelegateOutputFileSink.save(fileObject);
         }
       });
     }
   }
 
-
-  private static final Key<TasksCounter> COUNTER_KEY = Key.create("_async_task_counter_");
-
-  private static final class TasksCounter {
-    private int myCounter;
-
-    private synchronized void incTaskCount() {
-      myCounter++;
-    }
-
-    private synchronized void decTaskCounter() {
-      myCounter = Math.max(0, myCounter - 1);
-      if (myCounter == 0) {
-        notifyAll();
-      }
-    }
-
-    public synchronized void await() {
-      while (myCounter > 0) {
-        try {
-          wait();
-        }
-        catch (InterruptedException ignored) {
-        }
-      }
-    }
+  @Override
+  public long getExpectedBuildTime() {
+    return 100;
   }
+
+  private static final Key<Semaphore> COUNTER_KEY = Key.create("_async_task_counter_");
 }
