@@ -1,18 +1,4 @@
-/*
- * Copyright 2000-2014 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.jetbrains.python.refactoring.extractmethod;
 
 import com.intellij.codeInsight.CodeInsightUtilCore;
@@ -25,7 +11,6 @@ import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.Messages;
-import com.intellij.openapi.util.Couple;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.TextRange;
 import com.intellij.openapi.util.text.StringUtil;
@@ -41,6 +26,7 @@ import com.intellij.refactoring.rename.RenameUtil;
 import com.intellij.refactoring.util.AbstractVariableData;
 import com.intellij.refactoring.util.CommonRefactoringUtil;
 import com.intellij.usageView.UsageInfo;
+import com.intellij.util.ArrayUtil;
 import com.intellij.util.Function;
 import com.intellij.util.IncorrectOperationException;
 import com.intellij.util.containers.ContainerUtil;
@@ -90,7 +76,7 @@ public class PyExtractMethodUtil {
     final boolean isStaticMethod = flags != null && flags.isStaticMethod();
 
     // collect statements
-    final List<PsiElement> elementsRange = PyPsiUtils.collectElements(statement1, statement2);
+    final List<PsiElement> elementsRange = PsiTreeUtil.getElementsOfRange(statement1, statement2);
     if (elementsRange.isEmpty()) {
       CommonRefactoringUtil.showErrorHint(project, editor,
                                           PyBundle.message("refactoring.extract.method.error.empty.fragment"),
@@ -120,7 +106,7 @@ public class PyExtractMethodUtil {
         builder.append("async ");
       }
       builder.append("def f():\n    ");
-      final List<PsiElement> newMethodElements = new ArrayList<PsiElement>(elementsRange);
+      final List<PsiElement> newMethodElements = new ArrayList<>(elementsRange);
       final boolean hasOutputVariables = !fragment.getOutputVariables().isEmpty();
 
       final PyElementGenerator generator = PyElementGenerator.getInstance(project);
@@ -137,7 +123,7 @@ public class PyExtractMethodUtil {
       }
 
       // Generate method
-      final PyFunction generatedMethod = generateMethodFromElements(project, methodName, variableData, newMethodElements, flags, isAsync);
+      final PyFunction generatedMethod = generateMethodFromElements(methodName, variableData, newMethodElements, flags, isAsync);
       final PyFunction insertedMethod = WriteAction.compute(() -> insertGeneratedMethod(statement1, generatedMethod));
 
       // Process parameters
@@ -174,7 +160,7 @@ public class PyExtractMethodUtil {
       PyPsiUtils.assertValid(statement1);
       PyPsiUtils.assertValid(statement2);
       final List<SimpleMatch> duplicates = collectDuplicates(finder, statement1, insertedMethod);
-      
+
       // replace statements with call
       PsiElement insertedCallElement = WriteAction.compute(() -> replaceElements(elementsRange, callElement));
       insertedCallElement = CodeInsightUtilCore.forcePsiPostprocessAndRestoreElement(insertedCallElement);
@@ -228,7 +214,7 @@ public class PyExtractMethodUtil {
 
   private static void processGlobalWrites(@NotNull final PyFunction function, @NotNull final PyCodeFragment fragment) {
     final Set<String> globalWrites = fragment.getGlobalWrites();
-    final Set<String> newGlobalNames = new LinkedHashSet<String>();
+    final Set<String> newGlobalNames = new LinkedHashSet<>();
     final Scope scope = ControlFlowCache.getScope(function);
     for (String name : globalWrites) {
       if (!scope.isGlobal(name)) {
@@ -247,7 +233,7 @@ public class PyExtractMethodUtil {
 
   private static void processNonlocalWrites(@NotNull PyFunction function, @NotNull PyCodeFragment fragment) {
     final Set<String> nonlocalWrites = fragment.getNonlocalWrites();
-    final Set<String> newNonlocalNames = new LinkedHashSet<String>();
+    final Set<String> newNonlocalNames = new LinkedHashSet<>();
     final Scope scope = ControlFlowCache.getScope(function);
     for (String name : nonlocalWrites) {
       if (!scope.isNonlocal(name)) {
@@ -313,7 +299,7 @@ public class PyExtractMethodUtil {
       CommandProcessor.getInstance().executeCommand(project, () -> {
         // Generate method
         final boolean isAsync = fragment.isAsync();
-        final PyFunction generatedMethod = generateMethodFromExpression(project, methodName, variableData, expression, flags, isAsync);
+        final PyFunction generatedMethod = generateMethodFromExpression(methodName, variableData, expression, flags, isAsync);
         final PyFunction insertedMethod = WriteAction.compute(() -> insertGeneratedMethod(expression, generatedMethod));
 
         // Process parameters
@@ -357,7 +343,7 @@ public class PyExtractMethodUtil {
 
         PyPsiUtils.assertValid(expression);
         final List<SimpleMatch> duplicates = collectDuplicates(finder, expression, insertedMethod);
-        
+
         // replace statements with call
         PsiElement insertedCallElement = null;
         if (callElement != null) {
@@ -391,7 +377,7 @@ public class PyExtractMethodUtil {
 
   @NotNull
   private static PsiElement replaceElements(@NotNull final SimpleMatch match, @NotNull final PsiElement element) {
-    final List<PsiElement> elementsRange = PyPsiUtils.collectElements(match.getStartElement(), match.getEndElement());
+    final List<PsiElement> elementsRange = PsiTreeUtil.getElementsOfRange(match.getStartElement(), match.getEndElement());
     final Map<String, String> changedParameters = match.getChangedParameters();
     PsiElement callElement = element;
     final PyElementGenerator generator = PyElementGenerator.getInstance(callElement.getProject());
@@ -442,7 +428,7 @@ public class PyExtractMethodUtil {
       final String name = parameter.getName();
       final String newName = map.get(name);
       if (name != null && newName != null && !name.equals(newName)) {
-        final Map<PsiElement, String> allRenames = new java.util.HashMap<PsiElement, String>();
+        final Map<PsiElement, String> allRenames = new java.util.HashMap<>();
         allRenames.put(parameter, newName);
         final UsageInfo[] usages = RenameUtil.findUsages(parameter, newName, false, false, allRenames);
         try {
@@ -467,13 +453,13 @@ public class PyExtractMethodUtil {
         builder.parameter(data.getName());
       }
     }
-    final PyParameterList pyParameterList = builder.buildFunction(project, LanguageLevel.forElement(generatedMethod)).getParameterList();
+    final PyParameterList pyParameterList = builder.buildFunction().getParameterList();
     generatedMethod.getParameterList().replace(pyParameterList);
   }
 
   @NotNull
   private static Map<String, String> createMap(@NotNull final AbstractVariableData[] variableData) {
-    final Map<String, String> map = new HashMap<String, String>();
+    final Map<String, String> map = new HashMap<>();
     for (AbstractVariableData data : variableData) {
       map.put(data.getOriginalName(), data.getName());
     }
@@ -497,8 +483,8 @@ public class PyExtractMethodUtil {
       final PsiElement target = parent instanceof PyClass ? ((PyClass)parent).getStatementList() : parent;
       final PsiElement insertionAnchor = PyPsiUtils.getParentRightBefore(anchor, target);
       assert insertionAnchor != null;
-      final Couple<PsiComment> comments = PyPsiUtils.getPrecedingComments(insertionAnchor);
-      result = insertionAnchor.getParent().addBefore(generatedMethod, comments != null ? comments.getFirst() : insertionAnchor);
+      final List<PsiComment> comments = PyPsiUtils.getPrecedingComments(insertionAnchor);
+      result = insertionAnchor.getParent().addBefore(generatedMethod, !comments.isEmpty() ? comments.get(0) : insertionAnchor);
     }
     // to ensure correct reformatting, mark the entire method as generated
     result.accept(new PsiRecursiveElementVisitor() {
@@ -512,8 +498,7 @@ public class PyExtractMethodUtil {
   }
 
   @NotNull
-  private static PyFunction generateMethodFromExpression(@NotNull final Project project,
-                                                         @NotNull final String methodName,
+  private static PyFunction generateMethodFromExpression(@NotNull final String methodName,
                                                          @NotNull final AbstractVariableData[] variableData,
                                                          @NotNull final PsiElement expression,
                                                          @Nullable final PyUtil.MethodFlags flags, boolean isAsync) {
@@ -531,12 +516,11 @@ public class PyExtractMethodUtil {
       text = expression.getText();
     }
     builder.statement("return " + text);
-    return builder.buildFunction(project, LanguageLevel.forElement(expression));
+    return builder.buildFunction();
   }
 
   @NotNull
-  private static PyFunction generateMethodFromElements(@NotNull final Project project,
-                                                       @NotNull final String methodName,
+  private static PyFunction generateMethodFromElements(@NotNull final String methodName,
                                                        @NotNull final AbstractVariableData[] variableData,
                                                        @NotNull final List<PsiElement> elementsRange,
                                                        @Nullable PyUtil.MethodFlags flags,
@@ -549,7 +533,7 @@ public class PyExtractMethodUtil {
     }
     addDecorators(builder, flags);
     addFakeParameters(builder, variableData);
-    final PyFunction method = builder.buildFunction(project, LanguageLevel.forElement(elementsRange.get(0)));
+    final PyFunction method = builder.buildFunction();
     final PyStatementList statementList = method.getStatementList();
     for (PsiElement element : elementsRange) {
       if (element instanceof PsiWhiteSpace) {
@@ -611,7 +595,7 @@ public class PyExtractMethodUtil {
           throw new CommonRefactoringUtil.RefactoringErrorHintException(error);
         }
       }
-      final List<AbstractVariableData> data = new ArrayList<AbstractVariableData>();
+      final List<AbstractVariableData> data = new ArrayList<>();
       for (String in : fragment.getInputVariables()) {
         final AbstractVariableData d = new AbstractVariableData();
         d.name = in + "_new";
@@ -619,13 +603,14 @@ public class PyExtractMethodUtil {
         d.passAsParameter = true;
         data.add(d);
       }
-      return Pair.create(name, data.toArray(new AbstractVariableData[data.size()]));
+      return Pair.create(name, data.toArray(new AbstractVariableData[0]));
     }
 
     final boolean isMethod = PyPsiUtils.isMethodContext(element);
-    final ExtractMethodDecorator decorator = new ExtractMethodDecorator() {
+    final ExtractMethodDecorator<Object> decorator = new ExtractMethodDecorator<Object>() {
+      @Override
       @NotNull
-      public String createMethodSignature(final String methodName, @NotNull final AbstractVariableData[] variableDatas) {
+      public String createMethodSignature(@NotNull ExtractMethodSettings<Object> settings) {
         final StringBuilder builder = new StringBuilder();
         if (isClassMethod) {
           builder.append("cls");
@@ -633,7 +618,7 @@ public class PyExtractMethodUtil {
         else if (isMethod && !isStaticMethod) {
           builder.append("self");
         }
-        for (AbstractVariableData variableData : variableDatas) {
+        for (AbstractVariableData variableData : settings.getAbstractVariableData()) {
           if (variableData.passAsParameter) {
             if (builder.length() != 0) {
               builder.append(", ");
@@ -642,15 +627,16 @@ public class PyExtractMethodUtil {
           }
         }
         builder.insert(0, "(");
-        builder.insert(0, methodName);
+        builder.insert(0, settings.getMethodName());
         builder.insert(0, "def ");
         builder.append(")");
         return builder.toString();
       }
     };
 
-    final AbstractExtractMethodDialog dialog = new AbstractExtractMethodDialog(project, "method_name", fragment, validator, decorator,
-                                                                               PythonFileType.INSTANCE) {
+    final AbstractExtractMethodDialog<?> dialog = new AbstractExtractMethodDialog<Object>(project, "method_name", fragment,
+                                                                                          ArrayUtil.EMPTY_OBJECT_ARRAY, validator,
+                                                                                          decorator, PythonFileType.INSTANCE) {
       @Override
       protected String getHelpId() {
         return "python.reference.extractMethod";
@@ -676,7 +662,7 @@ public class PyExtractMethodUtil {
     private final Project myProject;
     @Nullable private final Function<String, Boolean> myFunction;
 
-    public PyExtractMethodValidator(final PsiElement element, final Project project) {
+    PyExtractMethodValidator(final PsiElement element, final Project project) {
       myElement = element;
       myProject = project;
       final ScopeOwner parent = ScopeUtil.getScopeOwner(myElement);
@@ -698,6 +684,7 @@ public class PyExtractMethodUtil {
       };
     }
 
+    @Override
     @Nullable
     public String check(final String name) {
       if (myFunction != null && !myFunction.fun(name)) {
@@ -706,6 +693,7 @@ public class PyExtractMethodUtil {
       return null;
     }
 
+    @Override
     public boolean isValidName(@NotNull final String name) {
       final NamesValidator validator = LanguageNamesValidation.INSTANCE.forLanguage(PythonLanguage.getInstance());
       assert validator != null;
